# robot-code

./: .clang-format  CMakeLists.txt  Cargo.toml  README.md  c2021 v2  climber.cc  controls.cc  rustup_add_tools.sh
.circleci/: config.yml  config.yml.bak
2021 test code/.wpilib/: wpilib_preferences.json
2021 test code/src/main/cpp/: Channel.cpp  Controls.cpp  Drive.cpp  Intake.cpp  Limelight.cpp  Robot.cpp  Shoot.cpp
2021 test code/src/main/include/: Channel.h  Controls.h  Drive.h  Intake.h  Limelight.h  Robot.h  Shoot.h
2021 v2/: README.md
2021 v2/2021/src/main/cpp/: Controls.cpp  Drive.cpp  Shoot.cpp
2021 v2/2021/src/main/include/: Shoot.h
2021_v2/: README.md  logs.txt
2021_v2/2021/src/main/: AutoShoot.cpp  AutoShoot.h
2021_v2/2021/src/main/cpp/: AutoShoot.cpp  Channel.cpp  Climb.cpp  Controls.cpp  Drive.cpp  Intake.cpp  Limelight.cpp  PID.cpp  Robot.cpp  Shoot.cpp
2021_v2/2021/src/main/include/: AutoShoot.h  Channel.h  Climb.h  Controls.h  Drive.h  Intake.h  Limelight.h  PID.h  Robot.h  Shoot.h  sdb_types.h
2021_v2/src/main/cpp/: AutoShoot.cpp  Channel.cpp  Climb.cpp  Controls.cpp  Drive.cpp  Intake.cpp  Robot.cpp  Shoot.cpp
2021_v2/src/main/include/: AutoShoot.h  Channel.h  Climb.h  Controls.h  Intake.h  Limelight.h  Robot.h  Shoot.h
c2018/: Cargo.toml  DESIGN.md
c2018/coord-frames/: Cargo.toml
c2018/coord-frames/src/: lib.rs
c2018/ctre-elevator-tuning/: Cargo.toml
c2018/ctre-elevator-tuning/src/: lib.rs  main.rs
c2018/elevator-loops/: Cargo.toml  harness.csv  plot.sh
c2018/elevator-loops/src/: main.rs
c2018/path-gen/: Cargo.toml
c2018/path-gen/src/: frames.rs  lib.rs
c2018/src/: cheesy_drive.rs  config.rs  main.rs  motion-profile.rs  talon_util.rs
c2018/src/subsystem/: control.rs  dashboard.rs  mod.rs  pneumatics.rs
c2018/src/subsystem/drive/: drive_side.rs  mod.rs
c2018/src/subsystems/: dashboard.rs  drive.rs  mod.rs  superstructure.rs
c2018/src/subsystems/controller/: edge_detect.rs  mod.rs  xbox.rs
c2018/src/subsystems/superstructure/: channel.rs  elevator.rs  hatch_hardware.rs  mod.rs  unjam.rs
c2018/src/util/: config.rs  talon_factory.rs
c2018/vision/: .gitignore  CMakeLists.txt  del-mar-cams.service  dmargstream  dmargstream.service  frc-cams-j120-tx1-firmware-3.0.rules  frc-cams-josh-laptop.rules  frc-static-eth0  nannycam.py  tx1-provision.sh
c2018/vision/cam-calibration/: 2018042100000030_1.xml  calibration-script.sh  checker-params.sh  chess-params.sh  circle-board-params.sh
c2018/vision/cam-calibration/interactive-calibration/: CMakeLists.txt  calibController.cpp  main.cpp
c2018/vision/src/: config.hpp  del_mar_quick_cams.cpp  macros.hpp  main.cpp  mjpeg_stream.cpp  mjpeg_stream.hpp
c2019/: CMakeLists.txt  Cargo.toml
c2019/elevator-loops/: harness.csv
c2019/src/: cheesy_drive.rs
c2019/src/subsystems/controller/: mod.rs  xbox.rs
c2019/src/subsystems/superstructure/: channel.rs  hatch_hardware.rs  unjam.rs
c2019/vision/: CMakeLists.txt  del-mar-cams.service  ncam_harness.sh  tx1-provision.sh
c2019/vision/cam-calibration/: calibration-script.sh  defaultConfig.xml
c2019/vision/cam-calibration/interactive-calibration/: frameProcessor.cpp  main.cpp
c2019/vision/src/: del_mar_quick_cams.cpp
c2020/: .clang-tidy  build.gradle
c2020/.wpilib/: wpilib_preferences.json
c2020/coprocessors/limelight/: 2020CrosshairOnlyEvenWiderEvenBetter.vpr
c2020/coprocessors/tx1/: gstream-commands.md  provision.sh
c2020/src/main/cpp/: Robot.h  config.cc  config.h  controls.cc  controls.h  paths.cpp  paths.h  robot.cc  robot.h  robot_state.cc  robot_state.h  subsystem.h
c2020/src/main/cpp/auto/: action.h  executor.h  selector.h  temp.cpp
c2020/src/main/cpp/shims/: minimal_phoenix.h  navx_ahrs.h
c2020/src/main/cpp/subsystems/: auto_shoot.cc  auto_shoot.h  ball_path.cc  hood.h  (+12 more)
c2020/src/main/include/: Robot.h
c2020/src/test/cpp/: action_flow_test.cpp  interp_test.cpp  main.cpp
c2021/: README.md  build.gradle
c2021 v2/: README.md
c2021 v2/src/main/cpp/: Drive.cpp  Operator.cpp  Robot.cpp  Shoot.cpp  config.cpp  controls.cpp
c2021 v2/src/main/include/: Drive.h  Drivetrain.h  Operator.h  Robot.h  Shoot.h  config.h  robot_state.h  subsystem.h
c2021/src/main/cpp/: Drivetrain.cpp  Robot.cpp  Shooter.cpp  config.cpp  robot_state.cpp
c2021/src/main/include/: Robot.h  config.h  controls.h
c2022/: README.md
c2022/src/main/cpp/: Robot.cpp  SwerveDrive.cpp  WheelDrive.cpp
c2022/src/main/include/: Robot.h  SwerveDrive.h  WheelDrive.h
controls/: Cargo.toml
controls/src/: integration.rs  lib.rs
ert/: Cargo.toml  build.rs  run_tests_as_root.sh
ert/config/: setup_rlim_group.sh
ert/src/: die.rs  init.rs  lib.rs  sync.rs  thread.rs  time.rs  util.rs
ert/src/die/: die-test.rs  mod.rs
ert/src/logging/: log_crate_clone.rs  mmap_file.rs  mod.rs
ert/src/queue/: imp.rs  mod.rs
ert/src/sync/: mod.rs
first-party/: CMakeLists.txt
first-party/controls/: Cargo.toml
first-party/controls/src/: assertions.rs  lib.rs
first-party/copcomp/: Description.md
first-party/copcomp/cpp/: CMakeLists.txt
first-party/copcomp/cpp/include/copcomp/: 2019packet.hpp  copcomp.hpp
first-party/copcomp/cpp/src/: copcomp.cpp
first-party/copcomp/cpp/test/: main.cpp
first-party/copcomp/rust/: Cargo.toml
first-party/copcomp/rust/src/: 2019-test.rs  c2019.rs  lib.rs
first-party/hardware/: Cargo.toml
first-party/hardware/src/: lib.rs
first-party/interp-map/: Cargo.toml
first-party/interp-map/src/: lib.rs
main/cpp/: Controls.cpp  Limelight.cpp
main/include/: Drive.h  Robot.h  Shoot.h
o2018/: Cargo.toml
o2018/src/: main.rs
o2018/src/subsystem/: mod.rs  pneumatics.rs
o2018/src/subsystem/drive/: drive_side.rs  mod.rs
o2018/src/subsystem/pneumatics/: mod.rs  pressure_sensor.rs
o2018/src/util/: config.rs  mod.rs  talon_factory.rs
rio-benches/: Cargo.toml  results.md
rio-benches/src/: channel_latency.rs  lib.rs  main.rs
src/main/cpp/: Channel.cpp  Climb.cpp  Intake.cpp  Limelight.cpp  Robot.cpp
src/main/include/: AutoShoot.h  Channel.h  Climb.h  Robot.h  Shoot.h
swerve/: README.md
(+58 files in other folders)
