[workspace]
members = [
    "first-party/controls",
    "first-party/interp-map",
    "first-party/copcomp/rust",
    "first-party/hardware",
    "rio-benches",
    "c2018",
    "c2018/ctre-elevator-tuning"
]

[profile.dev]
# We counterintuitively don't need this, since we can't view debug info ATM
debug = false

[profile.release]
lto = "thin"

[profile.bench]
lto = "thin"
