[package]
name = "c2019"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
built = "0.3"

[dependencies]
ctre = { git = "https://github.com/Lytigas/ctre-rs.git", branch = "2019-cargo" }
navx = { git = "https://github.com/Eaglestrike/navx-rs.git" }
hardware = { path = "../first-party/hardware" }
debug_stub_derive = "0.3"
lazy_static = "1"
wpilib = "0.4.0"
crossbeam-channel = "0.3.6"
bus = "2.0.1"
controls = { path = "../first-party/controls" }
paste = "0.1.4"
ctre-elevator-tuning = {path = "ctre-elevator-tuning"}

[package.metadata.frc]
rio-address = "10.1.14.2"
target-dir = "../target"
