[package]
name = "ert"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "die-test-bin"
path = "src/die/die-test.rs"

[dependencies]
aos_sync = { path = "../third-party/aos-sync" }
nix = "0.15.0"
lock_api = "0.3.1"
libc = "0.2.66"

[build-dependencies]
version_check = "0.9"
