[package]
name = "ert"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "die-test-bin"
path = "src/die/die-test.rs"
test = false

[features]
# Run tests that require root
# These are otherwise ignored by default
privelaged_tests = []

[dependencies]
aos_sync = { path = "../third-party/aos-sync" }
lazy_static = "1"
nix = "0.15.0"
lock_api = "0.3.1"
log = "0.4.8"
libc = "0.2.66"

[dev-dependencies]
rusty-fork = "0.2.2"

[build-dependencies]
version_check = "0.9"
