[package]
name = "o2018"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"

[dependencies]
ctre = "0.6.1"
navx = { git = "https://github.com/Eaglestrike/navx-rs.git"}
wpilib = "0.3.1"
crossbeam-channel = "0.3.6"
parking_lot = "0.7.1"
bus = "2.0.1"

[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "./target"
